spacing fix

--- a/templates/mall_sonub/css/component.header-menu.css
+++ b/templates/mall_sonub/css/component.header-menu.css
@@ -24,6 +24,7 @@ header .bottom .inner a.menu{
 	position:relative;
 	height:44px;
 	padding:15px 21px;
+	margin-bottom:20px;
 	font-size:1.1em;
 	font-weight:bold;
 	color:#ffffff;	
